# logfwd

./: .gitignore  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml  rust-clippy.yml  test-build copy.yml  test-build-mac.yml  test-build.yml
implementors/core/clone/: trait.Clone.js
implementors/core/fmt/: trait.Debug.js
implementors/core/future/future/: trait.Future.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
logfwd/: all.html  enum.FwdMsg.html  index.html  sidebar-items.js  struct.Shutdown.html
logfwd/clean_kill/: index.html  sidebar-items.js  struct.Handler.html
logfwd/drano/: index.html  sidebar-items.js  struct.Flusher.html
logfwd/error/: enum.Error.html  index.html
logfwd/tls_send/: index.html  struct.Sender.html
logfwd/udp_recv/: index.html  struct.Receiver.html
src/: clean_kill.rs  drano.rs  error.rs  lib.rs  main.rs
src/logfwd/: clean_kill.rs.html  drano.rs.html  error.rs.html  lib.rs.html
src/logfwd/tls_send/: mod.rs.html  tls.rs.html
src/logfwd/udp_recv/: mod.rs.html
src/tls_send/: mod.rs  tls.rs
src/udp_recv/: mod.rs
