[package]
name = "logfwd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["full", "tracing"] }
futures-util = "0.3.21"
libsystemd = "0.5.0"
tokio-rustls = "0.23.4"
rustls = "0.20.4"
webpki-roots = "0.22.3"
systemd-journal-logger = "0.5.0"
tokio-util = "0.7.1"
pin-project = "1.0.10"
tokio-stream = { version = "0.1.8", features = ["sync"] }
tracing = "0.1.34"
console-subscriber = "0.1.5"

[profile.release]
lto = true
