[package]
name = "logfwd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full", "tracing"] }
futures-util = "0.3.21"
tokio-rustls = "0.23.4"
rustls = "0.20.6"
webpki-roots = "0.22.4"
tokio-util = "0.7.3"
pin-project = "1.0.11"
tokio-stream = { version = "0.1.9", features = ["sync"] }
tracing = "0.1.34"
console-subscriber = "0.1.6"
once_cell = "1.12.0"

[target.'cfg(target_os = "linux")'.dependencies]
libsystemd = "0.5.0"

[target.'cfg(target_os = "macos")'.dependencies]
raunch = "1.0.0"

[profile.release]
lto = true
